# matio

./: LICENSE  matio.cabal
src/Data/: Mat.hs
src/Data/Mat/: Data.hs  Interface.hs  MemParser.hs  Raw.hsc
test/: PtrTest.hs  README.txt  TestMatFile.hs  TestUniversal.hs  bool.mat  complex.mat  complex2.mat  data.mat  doubles.mat  integers.mat  ints.mat  magic.mat  mat.mat  matfile5.mat  matfile73.mat  sample_doubles73.mat  sample_timeseries73.mat  single.mat  string.mat  struct.mat  tom_data.mat  tom_data73.mat  tom_data_new.mat  x.mat  zeros.mat
