name:          matio
version:       0.9.1
copyright:     (c) 2013 Well-Typed LLP
license:       BSD3
license-file:  LICENSE
author:        Andres Loeh <andres@well-typed.com>
maintainer:    Andres Loeh <andres@well-typed.com>
build-type:    Simple
cabal-version: >= 1.10
extra-source-files:
  test/README.txt
  test/*.mat
  test/*.hs

library
  default-language: Haskell2010
  includes:         matio.h
  extra-libraries:  matio hdf5
  exposed-modules:
    Data.Mat
    Data.Mat.Data
    Data.Mat.Raw
    Data.Mat.MemParser
    Data.Mat.Interface
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends: base           >= 3.0
               , mtl            >= 2.1.2     && < 2.2
               , containers     >= 0.5       && < 0.6
